# pysqdb

./: .gitignore  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml
02_io_operations/: index.html
03_data_cleaning/: index.html
04_join_filters/: index.html
05_summary_windows/: index.html
docs/: 01_quick_start.md  02_io_operations.md  03_data_cleaning.md  04_join_filters.md  05_summary_windows.md  api.md  index.md
pysqdb/: core.py
search/: search_index.json
site/: 404.html  index.html
site/01_quick_start/: index.html
site/02_io_operations/: index.html
site/03_data_cleaning/: index.html
site/04_join_filters/: index.html
site/05_summary_windows/: index.html
site/api/: index.html
site/search/: search_index.json
